--- a/index.html
+++ b/index.html
@@ -1,23 +1,2 @@
-<html>
-
-	<head>
-	    <meta charset="utf-8">
-	    <title>Агентство &laquo;Стасон&raquo;</title>
-	</head>
-
-	<body>
-	    <h1> Рекламное агентство &laquo;Стасон&laquo; </h1>
-	    <h2> Text for h2</h2>
-	    <h3> Little text</h3>
-	    <p> Абзац текста номер один<br>
-	    Абзац текста номер два </p>
-	    <br>
-	    <hr>
-
-
-	    <p> <a href = about_us.html> О нас </a> &nbsp <a href = contacts.html> Контакты </a></p>
-
-
-	</body>
-
+<html><head><meta charset='utf-8'><title>Гороскоп на сегодня</title></head><body><body><h1>Что день 2019-10-15 готовит</h1></body><p>Вечером предостерегайтесь приятных перемен. Ночью будьте открыты для гостей из забытого прошлого. Вечером будьте открыты для гостей из забытого прошлого.</p><p>Вечером ожидайте приятных перемен. Ночью будьте открыты для гостей из забытого прошлого. Перед Сном предостерегайтесь встреч со старыми знакомыми.</p><p>После Обеда будьте открыты для гостей из забытого прошлого. Ночью ожидайте встреч со старыми знакомыми. Ночью ожидайте гостей из забытого прошлого.</p><p>Утром предостерегайтесь гостей из забытого прошлого. Перед Сном будьте открыты для приятных перемен. Утром предостерегайтесь гостей из забытого прошлого.</p><p>После Обеда ожидайте неожиданного праздника. Перед Сном ожидайте неожиданного праздника. Перед Сном предостерегайтесь встреч со старыми знакомыми.</p></body>
 </html>
