--- a/about.html
+++ b/about.html
@@ -2,17 +2,17 @@
 		<body style=background-color:#DBDCF0;>
 			<h1>О чём все это</h1>
 			<p><img src=zodiac.png width = 100px></p>
-			<p><p><ol>
+			<p><p>Мы применили генератор случайных чисел, который случайным образом выбирает и комбинирует словосочетания из следующих категорий:<ol>
 				<li>
-					Время дня:
+					<b>Время дня:</b>
 						<ul><li>утром</li><li>днём</li><li>вечером</li><li>ночью</li><li>после обеда</li><li>перед сном</li></ul><br>
 				</li>
 				<li>
-					Глаголы:
+					<b>Глаголы:</b>
 						<ul><li>ожидайте</li><li>предостерегайтесь</li><li>будьте открыты для</li></ul><br>
 				</li>
 				<li>
-					Действия:
+					<b>Действия:</b>
 						<ul><li>гостей из забытого прошлого</li><li>встреч со старыми знакомыми</li><li>неожиданного праздника</li><li>приятных перемен</li></ul><br>
 				</li>
 			</ol></p></p>
