--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
-<html><head><meta charset='utf-8'><title>Гороскоп на сегодня</title></head>
-		<body style=background-color:#DBDCF0;>
+<html><head><link rel=stylesheet href=style.css><meta charset='utf-8'><title>Гороскоп на сегодня</title></head>
+		<body>
 			<h1>О чём все это</h1>
 			<p><img src=zodiac.png width = 100px></p>
 			<p><p>Мы применили генератор случайных чисел, который случайным образом выбирает и комбинирует словосочетания из следующих категорий:<ol>
